add angular material

--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,5 +1,6 @@
-<ul>
-    <li class="list-unstyled" *ngFor="let product of products">
-        {{product.name}}
-    </li>
-</ul>
+<div>
+    <h1>hello</h1>
+    <div *ngFor="let product of products">
+        <app-product-items></app-product-items>
+    </div>
+</div>
