--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-nav-bar></app-nav-bar>
 <div class="container" style="margin-top: 140px;">
     <h1>Welcome to {{title}}</h1>
+    <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
     <app-shop></app-shop>
 </div>
