--- a/client/src/app/shop/product-items/product-items.component.html
+++ b/client/src/app/shop/product-items/product-items.component.html
@@ -1,1 +1,16 @@
-<p>product-items works!</p>
+<mat-card class="example-card">
+    <mat-card-header>    
+      <mat-card-title>{{product.name}}</mat-card-title>
+      <mat-card-subtitle>{{product.price | currency}}</mat-card-subtitle>  
+    </mat-card-header>
+    <img mat-card-image src="{{product.pictureUrl}}" alt="{{product.name}}">
+    <mat-card-content>
+      <p>
+        {{product.description}}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>View</button>
+      <button mat-button>Edit</button>
+    </mat-card-actions>
+  </mat-card>
