--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-nav-bar></app-nav-bar>
-<div class="container" style="margin-top: 140px;">
-    <h1>Welcome to {{title}}</h1>
-    <app-shop></app-shop>
-</div>
+<mat-sidenav-container>
+    <mat-sidenav mode="side" opened>
+        Sidenav content
+    </mat-sidenav>
+    <mat-sidenav-content>
+        Welcome to {{title}}
+        <app-shop></app-shop>
+    </mat-sidenav-content>
+</mat-sidenav-container>
