--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,1 @@
-<mat-sidenav-container>
-    <mat-sidenav mode="side" opened>
-        Sidenav content
-    </mat-sidenav>
-    <mat-sidenav-content>
-        Welcome to {{title}}
-        <app-shop></app-shop>
-    </mat-sidenav-content>
-</mat-sidenav-container>
+<button pButton type="button" label="Click"></button>
