--- a/client/src/app/shop/product-items/product-items.component.html
+++ b/client/src/app/shop/product-items/product-items.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<!-- <mat-card class="example-card">
     <mat-card-header>    
       <mat-card-title>{{product.name}}</mat-card-title>
       <mat-card-subtitle>{{product.price | currency}}</mat-card-subtitle>  
@@ -13,4 +13,4 @@
       <button mat-button>View</button>
       <button mat-button>Edit</button>
     </mat-card-actions>
-  </mat-card>
+  </mat-card> -->
