--- a/client/src/app/shop/product-items/product-items.component.html
+++ b/client/src/app/shop/product-items/product-items.component.html
@@ -1,16 +1,19 @@
-<!-- <mat-card class="example-card">
-    <mat-card-header>    
-      <mat-card-title>{{product.name}}</mat-card-title>
-      <mat-card-subtitle>{{product.price | currency}}</mat-card-subtitle>  
-    </mat-card-header>
-    <img mat-card-image src="{{product.pictureUrl}}" alt="{{product.name}}">
-    <mat-card-content>
-      <p>
-        {{product.description}}
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>View</button>
-      <button mat-button>Edit</button>
-    </mat-card-actions>
-  </mat-card> -->
+<p-card
+  header="{{ product.name }}"
+  subheader="{{ product.price | currency }}"
+  styleClass="p-card-shadow"
+>
+  <ng-template pTemplate="header">
+    <img alt="{{ product.name }}" src="{{ product.pictureUrl }}" />
+  </ng-template>
+  <p class="desciption">{{ product.description }}</p>
+  <ng-template pTemplate="footer">
+    <p-button label="Save" icon="pi pi-check"></p-button>
+    <p-button
+      label="Cancel"
+      icon="pi pi-times"
+      styleClass="p-button-secondary"
+      [style]="{ 'margin-left': '.5em' }"
+    ></p-button>
+  </ng-template>
+</p-card>
